@@ -27,19 +27,19 @@ public class SearchRectangleObjectTest {
         assertNull(splitRectangles.get(QuadTree.NW_CHILD));
         assertNull(splitRectangles.get(QuadTree.SW_CHILD));
         assertNotNull(splitRectangles.get(QuadTree.SE_CHILD));
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.SE_CHILD).getX());
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.SE_CHILD).getY());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.SE_CHILD).getW());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.SE_CHILD).getH());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.SE_CHILD).getX());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.SE_CHILD).getY());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.SE_CHILD).getW());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.SE_CHILD).getH());
 
 
         splitRectangles = searchRectangleObject.split(5.0, 15.0);
         assertEquals(4, splitRectangles.size());
         assertNotNull(splitRectangles.get(QuadTree.NE_CHILD));
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.NE_CHILD).getX());
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.NE_CHILD).getY());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.NE_CHILD).getW());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.NE_CHILD).getH());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.NE_CHILD).getX());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.NE_CHILD).getY());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.NE_CHILD).getW());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.NE_CHILD).getH());
         assertNull(splitRectangles.get(QuadTree.NW_CHILD));
         assertNull(splitRectangles.get(QuadTree.SW_CHILD));
         assertNull(splitRectangles.get(QuadTree.SE_CHILD));
@@ -49,10 +49,10 @@ public class SearchRectangleObjectTest {
         assertEquals(4, splitRectangles.size());
         assertNull(splitRectangles.get(QuadTree.NE_CHILD));
         assertNotNull(splitRectangles.get(QuadTree.NW_CHILD));
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.NW_CHILD).getX());
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.NW_CHILD).getY());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.NW_CHILD).getW());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.NW_CHILD).getH());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.NW_CHILD).getX());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.NW_CHILD).getY());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.NW_CHILD).getW());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.NW_CHILD).getH());
         assertNull(splitRectangles.get(QuadTree.SW_CHILD));
         assertNull(splitRectangles.get(QuadTree.SE_CHILD));
 
@@ -61,35 +61,35 @@ public class SearchRectangleObjectTest {
         assertNull(splitRectangles.get(QuadTree.NE_CHILD));
         assertNull(splitRectangles.get(QuadTree.NW_CHILD));
         assertNotNull(splitRectangles.get(QuadTree.SW_CHILD));
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.SW_CHILD).getX());
-        assertEquals(new Double(5.0), splitRectangles.get(QuadTree.SW_CHILD).getY());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.SW_CHILD).getW());
-        assertEquals(new Double(10.0), splitRectangles.get(QuadTree.SW_CHILD).getH());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.SW_CHILD).getX());
+        assertEquals(Double.valueOf(5.0), splitRectangles.get(QuadTree.SW_CHILD).getY());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.SW_CHILD).getW());
+        assertEquals(Double.valueOf(10.0), splitRectangles.get(QuadTree.SW_CHILD).getH());
         assertNull(splitRectangles.get(QuadTree.SE_CHILD));
 
         //split rectangle from the middle
         splitRectangles = searchRectangleObject.split(10.0, 10.0);
         assertEquals(4, splitRectangles.size());
 
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.NE_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getW());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.NE_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getW());
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getW());
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getX());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SW_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getX());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SW_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getW());
 
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SE_CHILD).getX());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SE_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SE_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SE_CHILD).getW());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SE_CHILD).getX());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SE_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SE_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SE_CHILD).getW());
 
 
         //split from top
@@ -100,15 +100,15 @@ public class SearchRectangleObjectTest {
         assertNull(splitRectangles.get(QuadTree.NW_CHILD));
 
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getY());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SW_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getY());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SW_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getW());
 
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SE_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SE_CHILD).getY());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SE_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SE_CHILD).getW());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SE_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SE_CHILD).getY());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SE_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SE_CHILD).getW());
 
         //split from bottom
         splitRectangles = searchRectangleObject.split(10.0, 20.0);
@@ -118,15 +118,15 @@ public class SearchRectangleObjectTest {
         assertNull(splitRectangles.get(QuadTree.SW_CHILD));
 
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getY());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.NW_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getY());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.NW_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getW());
 
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.NE_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getY());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.NE_CHILD).getH());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getW());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.NE_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getY());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.NE_CHILD).getH());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getW());
 
         //split from left
         splitRectangles = searchRectangleObject.split(0.0, 10.0);
@@ -136,15 +136,15 @@ public class SearchRectangleObjectTest {
         assertNull(splitRectangles.get(QuadTree.SW_CHILD));
 
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NE_CHILD).getH());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.NE_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NE_CHILD).getH());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.NE_CHILD).getW());
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SE_CHILD).getX());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SE_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SE_CHILD).getH());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SE_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SE_CHILD).getX());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SE_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SE_CHILD).getH());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SE_CHILD).getW());
 
         //split from right
         splitRectangles = searchRectangleObject.split(20.0, 10.0);
@@ -154,15 +154,15 @@ public class SearchRectangleObjectTest {
         assertNull(splitRectangles.get(QuadTree.SE_CHILD));
 
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getX());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.NW_CHILD).getH());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.NW_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getX());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.NW_CHILD).getH());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.NW_CHILD).getW());
 
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getX());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SW_CHILD).getY());
-        assertEquals(new Double(5), splitRectangles.get(QuadTree.SW_CHILD).getH());
-        assertEquals(new Double(10), splitRectangles.get(QuadTree.SW_CHILD).getW());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getX());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SW_CHILD).getY());
+        assertEquals(Double.valueOf(5), splitRectangles.get(QuadTree.SW_CHILD).getH());
+        assertEquals(Double.valueOf(10), splitRectangles.get(QuadTree.SW_CHILD).getW());
 
 
 
